--- a/assets/scss/components/_animations.scss
+++ b/assets/scss/components/_animations.scss
@@ -155,7 +155,7 @@
 
         div:first-child {
             transition-duration: 400ms;
-            flex: 1 0 70%;
+            flex: 1;
         }
         span {
             flex: 0 0 15px;
